[gd_scene load_steps=3 format=3 uid="uid://cwiocw6oid5h8"]

[ext_resource type="Script" path="res://codes/settings.gd" id="1_5f7iu"]
[ext_resource type="AudioStream" uid="uid://bclg1o3204lbq" path="res://music/dabbackwood_-_KHroniki_1_77385929.mp3" id="2_echhl"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5f7iu")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 3

[node name="volume" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "громкость"

[node name="volume_slider" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="mute" type="CheckBox" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "без звука"

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "разрешение"

[node name="resolution" type="OptionButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
selected = 0
item_count = 4
popup/item_0/text = "1920x1080"
popup/item_1/text = "1600x900"
popup/item_1/id = 1
popup/item_2/text = "1280x720"
popup/item_2/id = 2
popup/item_3/text = "1152x648"
popup/item_3/id = 3

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "лимит фпс"

[node name="fps limition" type="OptionButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
selected = 1
item_count = 4
popup/item_0/text = "30"
popup/item_1/text = "60"
popup/item_1/id = 1
popup/item_2/text = "90"
popup/item_2/id = 2
popup/item_3/text = "120"
popup/item_3/id = 3

[node name="exit" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -86.0
offset_right = 223.0
grow_vertical = 0
theme_override_font_sizes/font_size = 40
text = "выход"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_echhl")
autoplay = true

[connection signal="value_changed" from="MarginContainer/VBoxContainer/volume_slider" to="." method="_on_volume_slider_value_changed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/mute" to="." method="_on_mute_toggled"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/resolution" to="." method="_on_resolution_item_selected"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/fps limition" to="." method="_on_fps_limition_item_selected"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
